<?xml version="1.0"?>
<package format="2">
  <name>vectornav_listener</name>
  <version>0.0.0</version>
  <description>ROS Python subscriber for VectorNav INS messages</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <!-- Build tools -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <!-- Your custom message package -->
  <build_depend>vectornav</build_depend>

  <!-- Run-time dependencies -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>vectornav</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
